# bonsai

./: .gitattributes  .gitignore  .gitmodules  ON_DEVICE_INFERENCE.md  README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/prismml/bonsai/: ChatMessage.kt  MainActivity.kt  MessageAdapter.kt  ModelDownloadProtocol.kt  ThinkingResponseParser.kt
app/src/main/java/com/samsung/ibit/: BonsaiModel.kt  ChatMessage.kt  InferenceService.kt  MainActivity.kt  MessageAdapter.kt  ModelDownloadProtocol.kt  ModelDownloadService.kt  ThinkingResponseParser.kt
app/src/main/res/drawable/: bg_reasoning_panel.xml  ic_download.xml  ic_folder.xml  ic_ibit.xml  ic_send.xml
app/src/main/res/layout/: activity_main.xml  item_message.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml
app/src/test/java/com/prismml/bonsai/: ModelDownloadProtocolTest.kt  ThinkingResponseParserTest.kt
app/src/test/java/com/samsung/ibit/: BonsaiModelCatalogTest.kt  ModelDownloadProtocolTest.kt  ThinkingResponseParserTest.kt
gradle/: libs.versions.toml
llama/: PREBUILT_NATIVE.md  PREBUILT_NATIVE.sha256  build.gradle.kts
llama/src/main/cpp/: CMakeLists.txt  bonsai_runtime.cpp
llama/src/main/cpp/cmake/: vulkan-host-toolchain.cmake.in
llama/src/main/cpp/cmake/SPIRV-Headers/: SPIRV-HeadersConfig.cmake
llama/src/main/java/com/prismml/bonsai/runtime/: BonsaiEngine.kt  PerformanceMetrics.kt
patches/: llama-vulkan-host-ninja.patch
scripts/: bootstrap-native.ps1
